<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/home"/>

    <item android:title="Shop"
        android:icon="@drawable/baseline_store_24"
        android:id="@+id/shop"/>

    <item android:title="Cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:id="@+id/cart"/>

    <item android:title="Settings"
        android:icon="@drawable/baseline_settings_24"
        android:id="@+id/settings"/>

</menu>