<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ProductDetailsFragment"
    android:id="@+id/prodDetails"
    >

    <TextView
        android:id="@+id/frDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title" />

    <TextView
        android:id="@+id/frDetailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frDetailAddToCart"
        android:text="@string/addtocart" />

    <Button
        android:id="@+id/frDetailAmountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-" />

    <TextView
        android:id="@+id/frDetailAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1" />

    <Button
        android:id="@+id/frDetailAmountUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="amountUp"
        android:text="+" />


</LinearLayout>
